Animation Player code loop #51998

Closed
opened 2017-07-08 18:22:48 +02:00 by shaun kreider · 4 comments

System Information
Operating system and graphics card

Win7 GTX1070
Blender Version
Broken: 2.78c, 2.78.5
Worked: (optional)

Short description of error

The animation player (ctrl-F11) will peg a CPU core (13% usage on an 8 core) even when paused. Tried with jpg/png/mp4

Exact steps for others to reproduce the error

opengl render a few frames and run the animation player. pause the playback. check CPU performance. leave it open all night and wonder why your room is so hot.

**System Information** Operating system and graphics card Win7 GTX1070 **Blender Version** Broken: 2.78c, 2.78.5 Worked: (optional) **Short description of error** The animation player (ctrl-F11) will peg a CPU core (13% usage on an 8 core) even when paused. Tried with jpg/png/mp4 **Exact steps for others to reproduce the error** opengl render a few frames and run the animation player. pause the playback. check CPU performance. leave it open all night and wonder why your room is so hot.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ShaunKreider

Added subscriber: @ShaunKreider

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 910ab14145

This issue was referenced by 910ab14145e6ec329e5bfffbc81dbe311f810e42
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51998
No description provided.