Fix T51998: Anim player uses 100% CPU

The loop running with no events didn't sleep.
Now wait for events when paused.